# linkedin-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/linkedin_agent/: agents.py  api.py  main.py  models.py  prompts.py  types.py
src/linkedin_agent/agents/: post_agent.py  research_agent.py
src/linkedin_agent/utils/: linkedin_client.py  output_parser.py
